--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award.  She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.">
                   </figure>
                 </div>
              </div>
              <div class="col-sm-10">
                     <h3>Circuit Structures for Enhancing Efficient Defect Detection</h3>
                     <h4>Jennifer Dworak (SMU)</h4>
-                    <p></p>
+                    <p>The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time.</p>
             </div>
              </div>
           <div class="row">
@@ -382,7 +382,7 @@
                           </tr>
                         <tr bgcolor="#EBF5FB">
                           <th scope="row">8:40 - 09:20am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong> Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection - Hybrid<sup>1</sup> </strong><br> Jennifer Dworak (SMU) </br>  </td> 
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time."><strong> Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection - Hybrid<sup>1</sup> </strong><br> Jennifer Dworak (SMU) </br>  </td> 
                         </tr>
                         <tr>
                           <th scope="row">09:40 - 10:00am</th>
