--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
              </div>
              <div class="col-sm-10">
                <h3>An Architecture to Accelerate Computation on Encrypted Data</h3>
-               <h4>Daniel Sanchez</h4>
+               <h4>Daniel Sanchez (MIT)</h4>
                <p></p>
             </div>
         </div>
