--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award.  She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award. She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.">
                   </figure>
                 </div>
              </div>
@@ -254,7 +254,7 @@
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/daniel.jpeg" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top"data-content="">
                   </figure>
                 </div>
              </div>
@@ -415,7 +415,12 @@
                               <a href="assets/pdfs/4.pdf">Talk 4: Characterizing Memory Side Channels in FHE Applications <br> Asmita Pal (University of Wisconsin-Madison) </br> </td>
                           <tr>
                           <th scope="row">11:35 - 12:15pm</th>
-                          <td>Open Mic: Discussion on Data Integrity and Secure Cloud Computing - Hybrid<sup>1</sup> </td>
+                          <td>Open Mic: Discussion on Data Integrity and Secure Cloud Computing - Hybrid<sup>1</sup>
+                          <br>Confirmed Speakers (5 minutes each) : Moderated by: IBM Organizers </br>
+                          <br> Rama Govindaraju (Google) </br>
+                          <br> Sreejit Chakravarty (Intel) </br> 
+                          <br> Subhashish Mitra (Stanford) </br>
+                          </td>
                           </tr>
                        <!--<tr>
                           <th scope="row">8:00 - 9:00am</th>
