--- a/index.html
+++ b/index.html
@@ -240,14 +240,15 @@
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award. She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time.">
                   </figure>
                 </div>
              </div>
              <div class="col-sm-10">
                     <h3>Circuit Structures for Enhancing Efficient Defect Detection</h3>
-                    <h4>Jennifer Dworak (SMU)</h4>
-                    <p>The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time.</p>
+                    <h4>Jennifer Dworak (SMU)</h4><p>
+                        Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award. She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.</p>
+                    
             </div>
              </div>
           <div class="row">
@@ -261,7 +262,9 @@
              <div class="col-sm-10">
                <h3>An Architecture to Accelerate Computation on Encrypted Data</h3>
                <h4>Daniel Sanchez (MIT)</h4>
-               <p></p>
+               <p>Daniel Sanchez is an Associate Professor at MIT's Electrical Engineering and Computer Science Department and a member of the Computer Science and Artificial Intelligence Laboratory. He works in computer architecture and computer systems. His current research focuses on large-scale multicores with hundreds to thousands of cores, scalable and efficient memory hierarchies, architectures with quality-of-service guarantees, and scalable runtimes and schedulers.
+Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineering from Stanford University, where he worked with Professor Christos Kozyrakis. Daniel Sanchez has also received an M.S. in Electrical Engineering from Stanford (2009) and a B.S. in Telecommunications Engineering from the Technical University of Madrid, UPM (2007).
+               </p>
             </div>
         </div>
       </div>
@@ -387,13 +390,13 @@
                         <tr>
                           <th scope="row">09:40 - 10:00am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="In this paper we propose Defecticon, a system for efficient mercurial core detection at runtime. Defecticon synthesizes customized test cases for each CPU core based on their characteristics, and provides APIs for developers to integrate the generated test cases to their applications. To generate customized test cases, Defecticon first identifies a set of potentially defective flip-flops and gates on each core, via scan-based testing with an intentionally reduced, abnormal voltage. Defecticon then uses symbolic execution and/or bounded model checking to generate the test case as an instruction sequence that, once executed, propagates the potential defects to a software-visible state like a general purpose register or the L1 cache. Finally, Defecticon generates the necessary assertions to identify the defects, and stores the test case in a way that can be loaded and executed for each core at application runtime.">
-                              <a href="assets/pdfs/2.pdf">Talk 1: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
+                              <a href="assets/pdfs/1.pdf">Talk 1: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
                           </td>
                         </tr>
                         <tr>
                           <th scope="row">09:20 - 09:40am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="While hyper-scale data centers are reporting a growing number of Silent Data Errors (SDEs), existing detection alone is still insufficient to build an SDE-resilient system. In this work, we propose the adoption of Coded Computation to mitigate SDE computation errors efficiently. Based upon error correcting codes (ECC), which have been proven valuable to the mitigation of SDEs in storage and communication, coded computation performs computations in parallel that are homomorphic to ECC encoding/decoding functions, thus tolerating a configurable amount of computation errors. We first give a motivating example to compare coded computation with the traditional Triple Modular Redundancy. Then we introduce the state-of-the-art coded computation, their applications to SDEs mitigation mechanisms, and open questions for future work.">
-                              <a href="assets/pdfs/1.pdf">Talk 2: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
+                              <a href="assets/pdfs/2.pdf">Talk 2: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
                         </tr>
                         <tr bgcolor="#FEF9E7">
                           <th scope="row">10:00 - 10:15am</th>
@@ -416,10 +419,10 @@
                           <tr>
                           <th scope="row">11:35 - 12:15pm</th>
                           <td>Open Mic: Discussion on Data Integrity and Secure Cloud Computing - Hybrid<sup>1</sup>
-                          <br>Confirmed Speakers (5 minutes each) : Moderated by: IBM Organizers </br>
-                          <br> Rama Govindaraju (Google) </br>
-                          <br> Sreejit Chakravarty (Intel) </br> 
-                          <br> Subhashish Mitra (Stanford) </br>
+                          <br>Confirmed Speakers (5 minutes each) : Moderated by IBM Organizers
+                          <br> <strong>Rama Govindaraju (Google)</strong>: Rama is a Director of Engineering at Google where he leads the Systems Infrastructure Performance Engineering team. Prior to that Rama was a Distinguished Engineer at IBM responsible for leading the Software Architecture at IBM's Supercomputing Lab where he led the development of 5 generations of Supercomputers. Prior to that Rama received his MS and Phd in Computer Science from Rensselaer Polytechnic Institute in New York and BE in Computer Science from BIT Mesra, Ranchi, India. 
+                          <br> <strong>Sreejit Chakravarty (Intel) </strong>: Dr. Sreejit Chakravarty is currently a Principal Engineer at Intel Corporation. His current responsibilities include die-disaggregation and interconnect testing, silent data error and functional safety. Prior to that he was an Associate professor of Computer Science where his work was funded by multiple National Science Foundation Grants. 
+                          <br> <strong>Subhashish Mitra (Stanford)</strong>: Subhasish Mitra is Professor of Electrical Engineering and of Computer Science at Stanford University. He directs the Stanford Robust Systems Group, leads the Computation Focus Area of the Stanford SystemX Alliance, and is a member of the Wu Tsai Neurosciences Institute. His research ranges across Robust Computing, NanoSystems, Electronic Design Automation (EDA), and Neurosciences
                           </td>
                           </tr>
                        <!--<tr>
