--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<ul class="list-arrow-right">
                         <li>Pradip Bose (IBM)</li>
                         <li>Augusto Vega (IBM)</li>
-                        <!--<li>Jennifer Dworak (SMU)</li>-->
+                        <li>Jennifer Dworak (SMU)</li>
                         <li>Subhashish Mitra (Stanford)</li>
                         <li>Chris Wilkerson (Intel)</li>
                         <li>Ramon Bertran (IBM)</li>
@@ -450,10 +450,10 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Pradip Bose</a> </b> is a Distinguished Research Scientist and manager of Efficient and Resilient Systems at IBM T. J. Watson Research Center. He has over 39 years of experience at IBM and was a member of the pioneering RISC super scalar project at IBM (a pre-cursor to the first RS/6000 system product). He holds M.S. and Ph.D. degrees from University of Illinois at Urbana-Champaign. He is a member of IBM’s elite Academy of Technology and he is a Fellow of the IEEE.</p>
-                <!--<p>
+                <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Jennifer Dworak</a> </b> is a Professor of Electrical and Computer Engineering at Southern Methodist University. She holds M.S. and Ph.D degrees from Texas A&M University. Her research areas of expertise and interest include hardware security and reliability testing of integrated circuits.
-                </p>-->
+                </p>
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Nathan Manohar</a> </b> is a Research Scientist in Cryptography, Security, and Privacy and a member of the Cryptography Research Group at the IBM T.J. Watson Research Center. His main research interests are cryptography, computer security, and, more broadly, theoretical computer science. He is particularly interested in fully homomorphic encryption, secure multi-party computation, and functional encryption. He recently received his PhD in Computer Science from UCLA and joined IBM in 2021.
