--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                     <br>
                     <strong><sup>1</sup>Hybrid talks will happen live on-site and through webex, link will be emailed prior to the workshop</strong>
                     </br>
+                    <strong>Recording of the talks will be made available under request: Email <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a> to request the video recordings</strong> 
                     <p>
                     <table class="table table-hover">
                       <thead class="thead-light">
@@ -388,13 +389,13 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time."><strong> Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection - Hybrid<sup>1</sup> </strong><br> Jennifer Dworak (SMU) </br>  </td> 
                         </tr>
                         <tr>
-                          <th scope="row">09:40 - 10:00am</th>
+                          <th scope="row">09:20 - 09:40am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="In this paper we propose Defecticon, a system for efficient mercurial core detection at runtime. Defecticon synthesizes customized test cases for each CPU core based on their characteristics, and provides APIs for developers to integrate the generated test cases to their applications. To generate customized test cases, Defecticon first identifies a set of potentially defective flip-flops and gates on each core, via scan-based testing with an intentionally reduced, abnormal voltage. Defecticon then uses symbolic execution and/or bounded model checking to generate the test case as an instruction sequence that, once executed, propagates the potential defects to a software-visible state like a general purpose register or the L1 cache. Finally, Defecticon generates the necessary assertions to identify the defects, and stores the test case in a way that can be loaded and executed for each core at application runtime.">
                               <a href="assets/pdfs/1.pdf">Talk 1: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
                           </td>
                         </tr>
                         <tr>
-                          <th scope="row">09:20 - 09:40am</th>
+                          <th scope="row">09:40 - 10:00am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="While hyper-scale data centers are reporting a growing number of Silent Data Errors (SDEs), existing detection alone is still insufficient to build an SDE-resilient system. In this work, we propose the adoption of Coded Computation to mitigate SDE computation errors efficiently. Based upon error correcting codes (ECC), which have been proven valuable to the mitigation of SDEs in storage and communication, coded computation performs computations in parallel that are homomorphic to ECC encoding/decoding functions, thus tolerating a configurable amount of computation errors. We first give a motivating example to compare coded computation with the traditional Triple Modular Redundancy. Then we introduce the state-of-the-art coded computation, their applications to SDEs mitigation mechanisms, and open questions for future work.">
                               <a href="assets/pdfs/2.pdf">Talk 2: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
                         </tr>
