--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                     <h3 class="section-title multiple-title">Organizing Committee</h3>
                     <p>
 					<ul class="list-arrow-right">
-                        <li>Pradip Bose (IBM)</li>
+                        <li><strong>David Trilla (IBM) - Chair </strong></li>
+                        <li><strong>Pradip Bose (IBM) - Co-chair</strong></li>
                         <li>Augusto Vega (IBM)</li>
                         <li>Jennifer Dworak (SMU)</li>
                         <li>Subhashish Mitra (Stanford)</li>
@@ -153,7 +154,6 @@
                         <li>Nathan Manohar (IBM)</li>
                         <li>Nir Drucker (IBM)</li>
 						            <li>Subhankar Pal (IBM)</li>
-                        <li>David Trilla (IBM)</li>
 					</ul>
                     </p>
                     <h3 class="section-title multiple-title">Advisory Program Committee</h3>
