--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                     <h3 class="section-title">Registration</h3>
 
                     <p>
-                    DISCC will be held in conjunction with the <b><a href="https://www.microarch.org/micro55/"  target="_blank">
-                    55<sup>th</sup> International Symposium on Microarchitecture (MICRO 2022)</a></b>.
+                    DISCC will be held in conjunction with the <b><a href="https://www.microarch.org/micro56/"  target="_blank">
+                    56<sup>th</sup> International Symposium on Microarchitecture (MICRO 2023)</a></b>.
                     Refer to the main venue to continue with the registration process.
                     </p>
                 </div>
@@ -524,14 +524,14 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                 <div class="col-sm-3">
                     <h3 class="section-title">Event Location</h3>
                     <address>
-					  <p>Westin Chicago River North, Chicago, Illinois, USA</p>
+					  <p>Westin Harbour Castle, Toronto, Canada</p>
                     </address>
                     
                     <!-- <p><b><a href="https://www.hpca-conf.org/2020/venue-hotel/" target="_blank"> Check main venue site for more information.</a></b></p> -->
 
                 </div>
                 <div class="col-sm-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190255.8460334488!2d-87.73196395!3d41.83373295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1660947543866!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.90977277633!2d-79.54286467674356!3d43.718370958029936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sus!4v1690852076470!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
