--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
               </div>
             </div>
             <div class="row">
+				<em>To be announced</em>
+
+<!--				
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
@@ -269,96 +272,8 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
         </div>
       </div>
     </section>
+-->
 
-    <!--<section id="speakers" class="section speakers">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="section-title">Invited Speakers</h3>
-                </div>
-            </div>
-            TBA
-    -->
-            <!--
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt="" title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" >
-                        </figure>
-                        <h4>Joseph Zuckerman</h4>
-                        <p>Columbia University</p> 
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Helena Caminal</h4>
-                        <p>Cornell University</p> 
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Maitreyi Ashok</h4>
-                        <p>Massachusetts Institute of Technology</p> 
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 ">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Gauri Patwardhan</h4>
-                        <p>University of Illinois Urbana-Champaign</p> 
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Meghan Clark</h4>
-                        <p>University of California, Berkeley</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Vikram Narayanan</h4>
-                        <p>University of California, Irvine</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-md-offset-1">
-                    <div class="speaker">
-                        <figure>
-                            <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Jovan Stojkovic</h4>
-                        <p>University of Illinois Urbana-Champaign</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="speaker">
-                        <figure>
-                            <img alt="" title="Bio"  class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
-                        </figure>
-                        <h4>Poulami Das</h4>
-                        <p>Georgia Institute of Technology</p> 
-                    </div>
-                </div>
-            </div>
-            -->
         </div>
     </section>
 
@@ -367,6 +282,9 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
             <div class="row">
                 <div class="col-md-11">
                     <h3 class="section-title">Program</h3>
+					<em>To be announced</em>
+
+<!--					
                     (<em>all times are in Central Time</em>)
                     <br>
                     <strong><sup>1</sup>Hybrid talks will happen live on-site and through webex, link will be emailed prior to the workshop</strong>
@@ -426,16 +344,9 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                           <br> <strong>Subhashish Mitra (Stanford)</strong>: Subhasish Mitra is Professor of Electrical Engineering and of Computer Science at Stanford University. He directs the Stanford Robust Systems Group, leads the Computation Focus Area of the Stanford SystemX Alliance, and is a member of the Wu Tsai Neurosciences Institute. His research ranges across Robust Computing, NanoSystems, Electronic Design Automation (EDA), and Neurosciences
                           </td>
                           </tr>
-                       <!--<tr>
-                          <th scope="row">8:00 - 9:00am</th>
-                          <td>Tutorial 1: Tendencies in FHE Accelerators
-                              <br> Part 1: Introduction to FHE</br>
-                              <br>Part 2: FHE Accelerators - Overview and Comparison</br>
-                              <br>David Trilla, Subhankar Pal (IBM Research)</br>
-                          </td>
-                       </tr>-->
                         </tbody>
                     </table>
+-->
                 </div>
             </div>
         </div>
