--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                     <h3 class="section-title multiple-title">Call for Contributions</h3>
                     <p>
-                        Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://microarch.org/micro56/index.php" rel="nofollow" target="_blank">formatting guidelines as main conference</a>). Submissions should be submitted to the following <a href="">link</a> <strong>by September 29<sup>th</sup>, 2023</strong>. If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
+                        Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://microarch.org/micro56/index.php" rel="nofollow" target="_blank">formatting guidelines as main conference</a>). Submissions should be submitted to the following <a href="https://easychair.org/conferences/?conf=discc2023">link</a> <strong>by September 29<sup>th</sup>, 2023</strong>. If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
                     </p>
 
                     <h3 class="section-title multiple-title">Organizing Committee</h3>
