--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 
                     </p>
 
-                </div><!-- /.col-sm-6 -->
-
-                <div class="col-sm-6">
-
                     <h3 class="section-title multiple-title">Call for Contributions</h3>
                     <p>
                         Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://microarch.org/micro56/index.php" rel="nofollow" target="_blank">formatting guidelines as main conference</a>). Submissions should be submitted to the following <a href="https://easychair.org/conferences/?conf=discc2023" rel="nofollow" target="_blank">link</a> <strong>by September 29<sup>th</sup>, 2023</strong>. If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
                     </p>
+
+                </div><!-- /.col-sm-6 -->
+
+                <div class="col-sm-6">
 
                     <h3 class="section-title multiple-title">Organizing Committee</h3>
                     <p>
@@ -120,6 +120,20 @@
                         <li>Subhashish Mitra (Stanford University)</li>
                         <li>Omri Soceanu (IBM Research)</li>
 						<li>Silvio Dragone (IBM Research)</li>
+					</ul>
+                    </p>
+                    <h3 class="section-title multiple-title">Extended Organizing Committee</h3>
+                    <p>
+					<ul class="list-arrow-right">
+						<li>Ramon Bertran (IBM Research)</li>
+						<li>Nandhini Chandramoorthy (IBM Research)</li>
+						<li>Nathan Manohar (IBM Research)</li>
+						<li>Nir Drucker (IBM Research)</li>
+						<li>Karthik Swaminathan (IBM Research)</li>
+						<li>Subhankar Pal (IBM Research)</li>
+						<li>Aporva Amarnath (IBM Research)</li>
+						<li>Bharat Sukhwani (IBM Research)</li>
+						<li>Augusto Vega (IBM Research)</li>
 					</ul>
                     </p>
                     <h3 class="section-title multiple-title">Advisory Program Committee</h3>
@@ -317,7 +331,7 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Organizers</h3>
+                    <h3 class="section-title">Organizing Committee</h3>
                 </div>
                 <div class="col-md-8">
                 <p>
