Submission deadline extended

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                     <h3 class="section-title multiple-title">Call for Contributions</h3>
                     <p>
-                        Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://microarch.org/micro56/index.php" rel="nofollow" target="_blank">formatting guidelines as main conference</a>). Submissions should be submitted to the following <a href="https://easychair.org/conferences/?conf=discc2023" rel="nofollow" target="_blank">link</a> <strong>by September 29<sup>th</sup>, 2023</strong>. If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
+                        Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://microarch.org/micro56/index.php" rel="nofollow" target="_blank">formatting guidelines as main conference</a>). Submissions should be submitted to the following <a href="https://easychair.org/conferences/?conf=discc2023" rel="nofollow" target="_blank">link</a> by <del>September 29<sup>th</sup></del> <strong><font color="red">October 9<sup>th</sup>, 2023</font></strong>. If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
                     </p>
 
                 </div><!-- /.col-sm-6 -->
@@ -177,13 +177,16 @@
                 <div class="col-sm-4">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>Paper Submission Deadline<br>September 29<sup>th</sup>, 2023</h3>
+                    <h3>Paper Submission Deadline<br>
+						<del>September 29<sup>th</sup>, 2023</del><br>
+						October 9<sup>th</sup>, 2023
+					</h3>
                 
                 </div>
                 <div class="col-sm-4">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>Notification Date<br>October 13<sup>th</sup>, 2023</h3>
+                    <h3>Notification Date<br>October 16<sup>th</sup>, 2023</h3>
                 
                 </div>
                 <div class="col-sm-4">
